# opportunity_management

./: .gitignore  ACTION_PLAN.md  CALENDAR_FEATURE.md  CHECK_DEPLOYMENT.md  CLIENT_SCRIPT_NOTIFICATION_FIX.md  CLOSING_DATE_EXTENSION_NOTIFICATION.md  CONSOLE_REBUILD_SCRIPT.py  CONSOLE_UPDATE_NOTIFICATION_RECIPIENTS.py  Current Enabled Client Scripts for Opportunity.md  Current Notification Emails.md  DEPARTMENT_MANAGER_NOTIFICATIONS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  EMAIL_NOTIFICATION_FIX.md  EMAIL_SAMPLES_COMPARISON.md  EMAIL_TEMPLATES_PREVIEW.md  EMAIL_TEMPLATE_SETUP_GUIDE.md  FIX_INSTRUCTIONS.md  FRAPPE_CLOUD_DEPLOYMENT.md  FRAPPE_CLOUD_DEPLOYMENT_STEPS.md  GIT_BRANCH_STRATEGY.md  INSTALLATION_GUIDE.md  MANIFEST.in  MERGE_COMPLETE.md  MERGE_TO_MAIN.sh  NOTIFICATION_DUPLICATE_ANALYSIS.md  NOTIFICATION_FIX_GUIDE.md  README.md  SORTING_AND_COMPLETED_TAB_UPDATE.md  TEAM_ASSIGNMENT_GUIDE.md  TODO_DUPLICATE_CHECK.md  TODO_NOTIFICATION_FIX.md  WHY_SEEING_OTHERS_TODOS.md  WORKSPACE_FIX.md  WORKSPACE_FIX_COMMANDS.txt  WORKSPACE_FIX_NOW.sh  WORKSPACE_ICON_OPTIONS.md  fix_workspace.py  fix_workspace_v15.py  install_workspace.py  (+2 more)
.claude/: settings.local.json
opportunity_management/: api.py  cleanup_todos.py  hooks.py  modules.txt  opportunity_handler.py  patches.txt  quotation_handler.py  tasks.py
opportunity_management/opportunity_management/: api.py  attendance_reminders.py  business_hooks.py  ess_hooks.py  fcm_utils.py  modules.txt  notification_dispatcher.py  notification_templates.py  notification_utils.py  patches.txt  tasks.py
(+43 files in other folders)
