[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opportunity_management"
version = "1.0.0"
description = "Custom Opportunity Assignment and Notification Management"
requires-python = ">=3.10"
authors = [{ name = "ALKHORA", email = "as@alkhora.com" }]
dependencies = []

[tool.setuptools]
include-package-data = true
